# datatalker

./: .gitignore  README.md  pyproject.toml
datatalker/: __init__.py  agentic.py  ckan_proxy.py  config.py  context.py  data_loader.py  data_types.py  documentify.py  framework.py  handler.py  ogdp.py  renderer.py  resources.py  router.py  routes.py  tool_calling.py  types.py  vectorstore.py
examples/: gradio_app.py  static_flows.py  streamlit_app.py
notebooks/: building_documents.ipynb  dspy_reference.ipynb  ogdp_api.ipynb  pull_catalog_fields.ipynb  rethinking_retrieval.ipynb  seed_vectorstore.ipynb  tryouts.ipynb  understanding_ogdp.ipynb
scripts/: pull_ckan_metadata.py  pull_ogdp_metadata.py  summarize.py
