[project]
name = "datatalker"
version = "0.1.0"
description = "A conversational AI tool for data portals."
authors = [
    {name = "Vijay Kumar", email = "vijaynyaya@gmail.com"}
]
keywords = ["chatbot", "data portal", ""]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.7",
    "dspy>=2.6.21",
    "gradio>=5.28.0",
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "tenacity>=9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datatalker"]

[dependency-groups]
dev = [
    "pymongo>=4.12.1",
]
